adding detailed catalogue page
